FIX UI ON SMALLER SCREENS
put options in a seperate tab

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -9,6 +9,9 @@
 	border:1px solid black;
 	margin-bottom: 10px;
 }
+.tab-pane{
+    padding-top: 10px;
+}
 .alternate-bg
 {
     background: #FFFAFA;
